graphql-schema-parser/src/test/negative/override-builtin-scalar.graphqls
schema {
    query: Query
}

scalar String

type Query {
    someIntField: Int
    someStringField: String
}